--- a/AplicacionS.csproj
+++ b/AplicacionS.csproj
@@ -76,19 +76,35 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DataChip.cs" />
+    <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\ILoggingService.cs" />
+    <Compile Include="Interfaces\ISerialCommunicationService.cs" />
     <Compile Include="Models\DataFromChips.cs" />
+    <Compile Include="Models\SecurityNode.cs" />
+    <Compile Include="Models\SecurityZone.cs" />
     <Compile Include="Nodo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ConfigurationService.cs" />
+    <Compile Include="Services\FileLoggingService.cs" />
+    <Compile Include="Services\SerialCommunicationService.cs" />
+    <Compile Include="Services\AudioAlertService.cs" />
+    <Compile Include="Utils\GraphicsHelper.cs" />
+    <Compile Include="Views\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
